--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>shiro-2.1</module>
+        <module>shiro-2.2</module>
     </modules>
 
 
