--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>shiro-2.1</module>
         <module>shiro-2.2</module>
+        <module>shiro-2.4</module>
     </modules>
 
 
