--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>shiro-2.2</module>
         <module>shiro-2.4</module>
         <module>shiro-2.5</module>
+        <module>shiro-2.7</module>
     </modules>
 
 
