--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>shiro-2.4</module>
         <module>shiro-2.5</module>
         <module>shiro-2.7</module>
+        <module>shiro-3</module>
     </modules>
 
 
