--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>shiro-2.5</module>
         <module>shiro-2.7</module>
         <module>shiro-3</module>
+        <module>shiro-3.1</module>
     </modules>
 
 
