--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>shiro-2.7</module>
         <module>shiro-3</module>
         <module>shiro-3.1</module>
+        <module>shiro-3.5</module>
     </modules>
 
 
