--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
         <module>shiro-3</module>
         <module>shiro-3.1</module>
         <module>shiro-3.5</module>
+        <module>shiro-5.1</module>
+        <module>shiro-5.2</module>
     </modules>
 
 
