--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>shiro-3.5</module>
         <module>shiro-5.1</module>
         <module>shiro-5.2</module>
+        <module>shiro-5.3</module>
     </modules>
 
 
