--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>shiro-5.2</module>
         <module>shiro-5.3</module>
         <module>shiro-5.4</module>
+        <module>shiro-5.5</module>
     </modules>
 
 
