--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>shiro-5.3</module>
         <module>shiro-5.4</module>
         <module>shiro-5.5</module>
+        <module>shiro-6</module>
     </modules>
 
 
