--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>shiro-5.5</module>
         <module>shiro-6</module>
         <module>shiro-6.4</module>
+        <module>shiro-7.1</module>
     </modules>
 
 
