Shiro整合web进行授权校验

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>shiro-6</module>
         <module>shiro-6.4</module>
         <module>shiro-7.1</module>
+        <module>shiro-7.2</module>
     </modules>
 
 
