--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
         <module>shiro-7.1</module>
         <module>shiro-7.2</module>
         <module>shiro-9.1</module>
+        <module>shiro-10.4</module>
+        <module>shiro-10.5</module>
     </modules>
 
 
